[gd_scene load_steps=4 format=3 uid="uid://ueq8kxtdi2j7"]

[ext_resource type="Texture2D" uid="uid://coh85yqv7836q" path="res://robingood.png" id="1_0jcee"]
[ext_resource type="Script" uid="uid://csc4htam702wy" path="res://HomeToIndustry.gd" id="2_yuey4"]
[ext_resource type="Texture2D" uid="uid://485k2n3uk8q0" path="res://homeButton.png" id="3_rbd2j"]

[node name="RobinGoodHome" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(700.8368, 323)
scale = Vector2(0.51482314, 0.51605445)
texture = ExtResource("1_0jcee")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_yuey4")

[node name="Industry1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1.0
offset_top = 198.0
offset_right = 254.0
offset_bottom = 242.0
text = "Industry 1"

[node name="Industry2" type="Button" parent="Control"]
layout_mode = 0
offset_left = -1.0
offset_top = 352.0
offset_right = 254.0
offset_bottom = 396.0
text = "Industry2"

[node name="Industry3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 4.0
offset_top = 510.0
offset_right = 257.0
offset_bottom = 551.0
text = "Industry3"

[node name="HomeButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 209.0
offset_bottom = 207.0
scale = Vector2(1.0118694, 0.9408385)
icon = ExtResource("3_rbd2j")
